--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-<!--    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />-->
-
-<!--    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />-->
-
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-
-    <title>Obao</title>
-  </head>
-  <body>
-    <div id="root"></div>
-
-  </body>
+<html lang="uz">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<meta name="theme-color" content="#000000" />
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<base href="%PUBLIC_URL%/" />
+		<title>Malaka Oshirish</title>
+	</head>
+	<script src="https://code.responsivevoice.org/responsivevoice.js?key=tdKf3qA9"></script>
+	
+	<body>
+		<div id="root"></div>
+	</body>
 </html>
